--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=EcoPriceCalculator;encrypt=true;trustServerCertificate=true;
+spring.datasource.username=sa
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
