add part of item price calculator

--- a/src/main/resources/static/data/EcoConfigs.json
+++ b/src/main/resources/static/data/EcoConfigs.json
@@ -1,6 +1,10 @@
 [
   {
-    "name": "RationEffortCalorie",
+    "name": "RatioEffortCalorie",
+    "value": 2.0
+  },
+  {
+    "name": "PricePerThousandCalories",
     "value": 2.0
   }
 ]
